--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  margin-left: 2%;
 }
 
 /* Splash */
@@ -27,12 +28,12 @@
   height: 100vh;
 }
 
-.container-fluid>h1, .container-fluid>h3 {
+.colorh {
   color: #b59241;
 }
 
 iframe {
-  margin-top: 30px;
+  width: 96%;
 }
 
 .maparea {
@@ -64,7 +65,7 @@ iframe {
 }
 
 .modal-content {
-  background: rgba(51, 0, 102, 0.5);
+  background: rgba(51, 0, 102, 0.9);
   color: white;
 }
 
@@ -98,33 +99,7 @@ iframe {
   /* Add some space below the input */
 }
 
-#myUL {
-  /* Remove default list styling */
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-#myUL li a {
-  border: 1px solid #ddd;
-  /* Add a border to all links */
-  margin-top: -1px;
-  /* Prevent double borders */
-  background-color: #f6f6f6;
-  /* Grey background color */
-  padding: 12px;
-  /* Add some padding */
-  text-decoration: none;
-  /* Remove default text underline */
-  font-size: 18px;
-  /* Increase the font-size */
-  color: black;
-  /* Add a black text color */
-  display: block;
-  /* Make it into a block element to fill the whole list */
-}
-
-#myUL li a:hover:not(.header) {
-  background-color: #eee;
-  /* Add a hover effect to all links, except for headers */
+.sizeimg {
+  width: 100%;
+  height: 20vh;
 }
